Revision history for Perl extension XML::Smart.


1.78
    - Skipped Test 'XML::Smart::Parser Data Populate Array test' on all base_tests for perl V 5.17.x due to potential Perl Bug.
    - asdf

1.77  2013-2-13
    - Rewrote tests with Test::More to prevent fails in OpenBSD, Fedora and some versions of Win.

1.76  2013-2-05
    - Fixed dependency fail by skipping author tests.

1.75  2013-2-05
    - Fixed dependency fail by adding prerequisite 'Object::MultiType'  => 0.03

1.74  2013-2-04
    - Fixed POD errors
    - Removed unnecessary modules from tests.
    - Removed warnings from Tree and Tie
    - Removed Binary data from Smart.pm
    - Added or croak to all file open()s

1.73  2013-1-28
    - Fixed bug 17834 in Tree.pm
    - Fixed object copy bug 34695
    - Updated POD to reflect where obj copy is not supported.
    - Fixed object Deep copy bug ( bug id 56806 ) 
    - Fixed Mem leak and added tests.
    - Added ANNIHILATE for better object destruction
    - Fixed Encoding errors, added tests and added to pod

1.71  2013-1-26
    - Updated all pm to use strict and warnings
    - Updated tests to use strict and warnings 
    - Added basic tests such as load
    - Moved tests to t/
    - Gramatical Corrections to POD
    - Removed binary data from POD ( bug id 53321 ) 
    - Updated list of binary data thats handled. 
    - Tree.pm updated to allow warnings after usage ( patch from bug ticket id: 27310 )
    - XML encoding declaration changed from utf-8 to UTF-8 ( bug id 76668 )
    - Fixed URL tests ( bug id 34562 fix provided )
    - Check added for existence of object in destructor ( bug id 62091 fix provided )

1.6.9 2004-9-21
    - dump_tree() and similars methods will dump hash keys sorted now.
    - Hooks on_start, on_char and on_end for the parser will receive the parser object too.


1.6.8 2004-8-3
    - Fixed minor bug for order of keys and new multiple elements.
    - Fixed assigment of content with the method content() for new trees.