@@ -674,11 +674,6 @@ subtest 'XML::Smart::Parser Data populate test' => sub {
 
 subtest 'XML::Smart::Parser Data Populate Array test' => sub {
 
-
-  if( $] > 5.016 ) { 
-      plan skip_all => "Skip on $]" ;
-  }
-
   my $XML = XML::Smart->new('' , 'XML::Smart::Parser') ;
   $$XML->{ DEV_DEBUG } = 1 ;
   
