@@ -631,6 +631,7 @@ subtest 'XML::Smart::Parser Data populate test' => sub {
   done_testing() ;
 
 } ;
+
 #########################
 
 
@@ -640,10 +641,6 @@ subtest 'XML::Smart::Parser Data populate test' => sub {
 
 
 subtest 'XML::Smart::Parser Data Populate Array test' => sub {
-
-  if( $] > 5.016 ) { 
-      plan skip_all => "Skip on $]" ;
-  }
 
   my $XML = XML::Smart->new('' , 'XML::Smart::Parser') ;
   
@@ -683,6 +680,7 @@ subtest 'XML::Smart::Parser Data Populate Array test' => sub {
 
 
 subtest 'XML::Smart::Parser Array assign test' => sub {
+
 
   my $XML = XML::Smart->new('' , 'XML::Smart::Parser') ;
                           
